[GR-43894] Fix for 'new URL()' deprecation.