@@ -47,6 +47,7 @@ import java.io.IOException;
 import java.io.InputStream;
 import java.io.OutputStream;
 import java.net.MalformedURLException;
+import java.net.URI;
 import java.net.URL;
 import java.net.URLConnection;
 import static java.nio.charset.StandardCharsets.UTF_8;
@@ -253,7 +254,7 @@ public class GDSRESTConnectorTest extends TestBase {
 
     @Test
     public void testFillBasics() throws MalformedURLException {
-        FileDownloader fd = new FileDownloader(TEST_ID, new URL(testURL), this);
+        FileDownloader fd = new FileDownloader(TEST_ID, URI.create(testURL).toURL(), this);
         testConnector.fillBasics(fd);
         Map<String, String> header = fd.getRequestHeaders();
         assertEquals(GDSRESTConnector.HEADER_VAL_GZIP, header.get(GDSRESTConnector.HEADER_ENCODING));
@@ -370,7 +371,7 @@ public class GDSRESTConnectorTest extends TestBase {
 
         @Override
         GDSRequester getGDSRequester(String acceptLicLink, String licID) throws MalformedURLException {
-            return new TestGDSRequester(new URL(acceptLicLink), licID);
+            return new TestGDSRequester(URI.create(acceptLicLink).toURL(), licID);
         }
 
         final class TestGDSRequester extends GDSRESTConnector.GDSRequester {
