@@ -44,6 +44,7 @@ import static org.junit.Assert.assertTrue;
 import org.junit.Before;
 import org.junit.Test;
 import java.net.SocketException;
+import java.net.URI;
 
 public class FileDownloaderTest extends NetworkTestBase {
 
@@ -76,7 +77,7 @@ public class FileDownloaderTest extends NetworkTestBase {
         Handler.bind("test://graalvm.io/download/truffleruby.zip",
                         clu);
 
-        URL u = new URL("test://graalvm.io/download/truffleruby.zip");
+        URL u = URI.create("test://graalvm.io/download/truffleruby.zip").toURL();
         FileDownloader dn = new FileDownloader("test",
                         u, this);
         dn.download();
@@ -95,7 +96,7 @@ public class FileDownloaderTest extends NetworkTestBase {
         Handler.bind("test://graalvm.io/download/truffleruby.zip",
                         clu);
 
-        URL u = new URL("test://graalvm.io/download/truffleruby.zip");
+        URL u = URI.create("test://graalvm.io/download/truffleruby.zip").toURL();
         FileDownloader dn = new FileDownloader("test",
                         u, this);
         dn.setShaDigest(new byte[0]);
@@ -183,7 +184,7 @@ public class FileDownloaderTest extends NetworkTestBase {
         Handler.bind("test://graalvm.io/download/truffleruby.zip",
                         clu);
 
-        URL u = new URL("test://graalvm.io/download/truffleruby.zip");
+        URL u = URI.create("test://graalvm.io/download/truffleruby.zip").toURL();
         Check check = new Check();
         delegateFeedback(check);
         FileDownloader dn = new FileDownloader("test",
@@ -205,7 +206,7 @@ public class FileDownloaderTest extends NetworkTestBase {
     @Test
     public void testDownloadSlowProxy() throws Exception {
         URL clu = getClass().getResource("data/truffleruby2.jar");
-        URL u = new URL("test://graalvm.io/download/truffleruby.zip");
+        URL u = URI.create("test://graalvm.io/download/truffleruby.zip").toURL();
 
         ChunkedConnection proxyConnect = new ChunkedConnection(
                         u,
@@ -250,7 +251,7 @@ public class FileDownloaderTest extends NetworkTestBase {
     @Test
     public void testDownloadFailedProxy() throws Exception {
         URL clu = getClass().getResource("data/truffleruby2.jar");
-        URL u = new URL("test://graalvm.io/download/truffleruby.zip");
+        URL u = URI.create("test://graalvm.io/download/truffleruby.zip").toURL();
 
         ChunkedConnection directConnect = new ChunkedConnection(
                         u,
@@ -299,7 +300,7 @@ public class FileDownloaderTest extends NetworkTestBase {
     @Test
     public void testDownloadProxy500() throws Exception {
         URL clu = getClass().getResource("data/truffleruby2.jar");
-        URL u = new URL("test://graalvm.io/download/truffleruby.zip");
+        URL u = URI.create("test://graalvm.io/download/truffleruby.zip").toURL();
 
         ChunkedConnection directConnect = new ChunkedConnection(
                         u,
@@ -352,7 +353,7 @@ public class FileDownloaderTest extends NetworkTestBase {
     @Test
     public void testDownloadFailure() throws Exception {
         URL clu = getClass().getResource("data/truffleruby2.jar");
-        URL u = new URL("test://graalvm.io/download/truffleruby.zip");
+        URL u = URI.create("test://graalvm.io/download/truffleruby.zip").toURL();
 
         ChunkedConnection conn = new ChunkedConnection(
                         u,
