@@ -27,6 +27,7 @@ package org.graalvm.component.installer;
 import org.graalvm.component.installer.remote.RemoteComponentParam;
 import java.io.IOException;
 import java.net.MalformedURLException;
+import java.net.URI;
 import java.net.URL;
 import java.nio.file.Path;
 import java.util.Iterator;
@@ -67,8 +68,8 @@ public class DownloadURLIterable extends AbstractIterable {
             String s = input.nextParameter();
             URL u;
             try {
-                u = new URL(s);
-            } catch (MalformedURLException ex) {
+                u = URI.create(s).toURL();
+            } catch (IllegalArgumentException | MalformedURLException ex) {
                 throw feedback.failure("URL_InvalidDownloadURL", ex, s, ex.getLocalizedMessage());
             }
             boolean progress = input.optValue(Commands.OPTION_NO_DOWNLOAD_PROGRESS) == null;
